--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -1,5 +1,4 @@
 <form action="" method="post" class="">{% csrf_token %}
-    {{ form.next_url.as_hidden }}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="oneliner">
         <h3>Summary of the one-liner<span class="required">*</span></h3>
@@ -46,7 +45,7 @@
         <div class="form-actions">
             {% include 'oneliners/elements/please_login.html' %}
             {% for action in form.actions %}<button class="btn {{ action.cssclass }}" type="submit" name="action" value="{{ action.name }}">{{ action.name }}</button>{% endfor %}
-            <button class="btn"><a href="{{ next_url }}">Cancel</a></button>
+            <button class="btn"><a href="{{ cancel_url }}">Cancel</a></button>
         </div>
     </div>
 </form>
