--- a/oneliners/templates/oneliners/elements/question_edit_form.html
+++ b/oneliners/templates/oneliners/elements/question_edit_form.html
@@ -1,5 +1,4 @@
 <form action="" method="post" class="">{% csrf_token %}
-    {{ form.next_url.as_hidden }}
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="question">
 	<h3>Summary<span class="required">*</span></h3>
@@ -33,7 +32,7 @@
 	<div class="form-actions">
 	    {% include 'oneliners/elements/please_login.html' %}
 	    {% for action in form.actions %}<button type="submit" name="action" class="btn {{ action.cssclass }}" value="{{ action.name }}">{{ action.name }}</button>{% endfor %}
-	    <button class="btn"><a href="{{ next_url }}">Cancel</a></button>
+	    <button class="btn"><a href="{{ cancel_url }}">Cancel</a></button>
 	</div>
     </div>
 </form>
