--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -1,5 +1,6 @@
 {% load markup %}
 {% load comments %}
+{% load staticfiles %}
 
     <div class="oneliner well oneliner-{{oneliner.pk}}">
 	<h3 class="summary">
@@ -45,7 +46,7 @@
 	{% get_comment_count for oneliner as comment_count %}
 	{% if comment_count > 0 %}
 	<div class="related">
-	    <h3 class="comments-toggle {{ comments_expanded }}"><img/>Comments ({{ comment_count }})</h3>
+	    <h3 class="comments-toggle {{ comments_expanded }}"><img src="{% static 'images/arrows0.png' %}" />Comments ({{ comment_count }})</h3>
 	    <div class="well comments {{ comments_expanded }}">
 	    {% render_comment_list for oneliner %}
 	    {% if user.is_authenticated and not nobuttons %}
