--- a/oneliners/templates/comments/list.html
+++ b/oneliners/templates/comments/list.html
@@ -2,7 +2,7 @@
 {% for comment in comment_list %}
 <div class="comment">
 <blockquote>
-    <p>{{ comment.comment|markdown:"safe" }}</p>
+    {{ comment.comment|markdown:"safe" }}
     <small>
 	by <a href="{% url 'oneliners.views.profile' comment.user.pk %}"><span>{{ comment.user.hackerprofile.get_display_name }}</span> </a>
 	on <span>{{ comment.submit_date }}</span>
