--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -31,6 +31,7 @@
   <link rel="stylesheet" href="{% static 'css/smoothness/jquery-ui-1.8.17.custom.css' %}">
   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
   <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap-responsive.min.css' %}">
+  <link rel="stylesheet" href="{% static 'jquery-upvote/jquery.upvote.css' %}">
   <link rel="stylesheet" href="{% static 'css/bashoneliners.css' %}">
   <!-- end CSS-->
 
@@ -76,6 +77,7 @@
   <script defer src="{% static 'js/django-jquery-csrf.js' %}"></script>
   <script defer src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   <script defer src="{% static 'js/showdown.js' %}"></script>
+  <script defer src="{% static 'jquery-upvote/jquery.upvote.js' %}"></script>
   <script defer src="{% static 'js/bashoneliners.js' %}"></script>
   <!-- end scripts-->
 
