--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -24,7 +24,7 @@ or browse or search the one-liners contributed by others.</p>
 {% endfor %}
 </ul>
 
-<h2>One-Liners</h2>
+<h2 class="page-header">One-Liners</h2>
 
 {% include 'oneliners/elements/oneliners_page.html' %}
 
