--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -2,58 +2,73 @@
 {% load comments %}
 {% load staticfiles %}
 
-    <div class="oneliner well oneliner-{{oneliner.pk}}">
-    <h3 class="summary">
-        <a href="{% url 'oneliners.views.oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
-        {% if user == oneliner.user %}
-        <a class="btn" href="{% url 'oneliners.views.oneliner_edit' oneliner.pk %}"><i class="icon-pencil"></i>{% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>
-        {% endif %}
-    </h3>
+<table width="90%">
+    <tr>
+        <td style="vertical-align: top; width: 50px">
+            <div id="topic-{{oneliner.pk}}" class="upvote">
+                <a class="upvote {{oneliner.upvoted}}"></a>
+                <span class="count">{{oneliner.score}}</span>
+                <a class="downvote {{oneliner.downvoted}}"></a>
+                <a class="star {{oneliner.starred}}"></a>
+            </div>
+        </td>
 
-    <pre class="line"><span class="add-on">&nbsp;$&nbsp;</span><span class="oneliner-line">{{ oneliner.line }}</span></pre>
+        <td>
+            <div class="oneliner oneliner-{{oneliner.pk}}">
+                <h3 class="summary">
+                    <a href="{% url 'oneliners.views.oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
+                    {% if user == oneliner.user %}
+                    <a class="btn" href="{% url 'oneliners.views.oneliner_edit' oneliner.pk %}"><i class="icon-pencil"></i>{% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>
+                    {% endif %}
+                </h3>
 
-    <p class="author"><small>
-    &mdash; by <a href="{% url 'oneliners.views.profile' oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
-        on <span>{{ oneliner.created_dt }}</span>
-    </small></p>
+                <pre class="line"><span class="add-on">&nbsp;$&nbsp;</span><span class="oneliner-line">{{ oneliner.line }}</span></pre>
 
-    <div class="explanation">
-        <h4>Explanation</h4>
-        {{ oneliner.explanation|markdown:"safe" }}
-    </div>
+                <p class="author"><small>
+                &mdash; by <a href="{% url 'oneliners.views.profile' oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
+                    on <span>{{ oneliner.created_dt }}</span>
+                </small></p>
 
-    {% if oneliner.limitations %}
-    <div class="limitations">
-        <h4>Limitations</h4>
-        {{ oneliner.limitations|markdown:"safe" }}
-    </div>
-    {% endif %}
+                <div class="explanation">
+                    <h4>Explanation</h4>
+                    {{ oneliner.explanation|markdown:"safe" }}
+                </div>
 
-    {% if user == question.user and not question.is_answered %}
-    <p><a href="{% url 'oneliners.ajax.question_answered' question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
-    {% endif %}
+                {% if oneliner.limitations %}
+                <div class="limitations">
+                    <h4>Limitations</h4>
+                    {{ oneliner.limitations|markdown:"safe" }}
+                </div>
+                {% endif %}
 
-    {% if user.is_authenticated and not nobuttons %}
-    <p>
-        <a href="{% url 'oneliners.views.oneliner_alternative' oneliner.pk %}" class="btn">Post an alternative one-liner</a>
-        <a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a>
-    </p>
-    {% endif %}
+                {% if user == question.user and not question.is_answered %}
+                <p><a href="{% url 'oneliners.ajax.question_answered' question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
+                {% endif %}
 
-    {% block related %}
-    {% endblock %}
+                {% if user.is_authenticated and not nobuttons %}
+                <p>
+                    <a href="{% url 'oneliners.views.oneliner_alternative' oneliner.pk %}" class="btn">Post an alternative one-liner</a>
+                    <a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a>
+                </p>
+                {% endif %}
 
-    {% get_comment_count for oneliner as comment_count %}
-    {% if comment_count > 0 %}
-    <div class="related">
-        <h3 class="comments-toggle {{ comments_expanded }}"><img src="{% static 'images/arrows0.png' %}" alt="[comments]" />Comments ({{ comment_count }})</h3>
-        <div class="well comments {{ comments_expanded }}">
-        {% render_comment_list for oneliner %}
-        {% if user.is_authenticated and not nobuttons %}
-        <p><a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
-        {% endif %}
-        </div>
-    </div>
-    {% endif %}
+                {% block related %}
+                {% endblock %}
 
-    </div>
+                {% get_comment_count for oneliner as comment_count %}
+                {% if comment_count > 0 %}
+                <div class="related">
+                    <h3 class="comments-toggle {{ comments_expanded }}"><img src="{% static 'images/arrows0.png' %}" alt="[comments]" />Comments ({{ comment_count }})</h3>
+                    <div class="well comments {{ comments_expanded }}">
+                    {% render_comment_list for oneliner %}
+                    {% if user.is_authenticated and not nobuttons %}
+                    <p><a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
+                    {% endif %}
+                    </div>
+                </div>
+                {% endif %}
+            </div>
+        </td>
+    </tr>
+    <tr><td colspan="2"><hr/></td></tr>
+</table>
