--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -23,8 +23,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link href="{{ STATIC_URL }}images/favicon.ico" rel="icon" type="image/x-icon" />
-  <link href="{{ STATIC_URL }}images/favicon.ico" rel="shortcut icon" type="image/x-icon" />
+  <link href="{% static 'images/favicon.ico' %}" rel="icon" type="image/x-icon" />
+  <link href="{% static 'images/favicon.ico' %}" rel="shortcut icon" type="image/x-icon" />
 
   <!-- CSS: implied media=all -->
   <!-- CSS concatenated and minified via ant build script-->
