voting up and down works, but a bit dirty, will need to clean up

--- a/oneliners/templates/html5.html
+++ b/oneliners/templates/html5.html
@@ -83,6 +83,8 @@
 
     <script type="text/javascript">
 	<!--
+	var App = window.App = {};
+	App.user_id = '{{ user.id }}';
 	$(document).ready(function() {
 	    {% block ready %}{% endblock %}
 	});
