--- a/oneliners/templates/500.html
+++ b/oneliners/templates/500.html
@@ -12,14 +12,11 @@
     most probably it is *our* fault, NOT yours.</p>
     <p>We want to know about this problem,
     and for that we need a little help from you.</p>
-    <p>Please send us an email at this address:
+    <p><a href="https://github.com/janosgyerik/bashoneliners/issues/new">Please create an issue on GitHub, explaining what happened.</a></p>
+    <p>Can you reproduce the problem anytime?
+    Does it happen only sometimes or always?</p>
+    <p>If GitHub is inconvenient for you, then please email us here instead: 
     <a href="mailto:bashoneliners@googlegroups.com">bashoneliners@googlegroups.com</a></p>
-    <p>Please explain what happened,
-    and if you can reproduce the problem anytime or
-    if it only happens sometimes but not always.</p>
-    <p>It is very important that you email us,
-    otherwise who knows when we will notice that there is a problem...</p>
-    <p>Once we get your message, we will sort this thing out ASAP.</p>
 </div>
 
 <p><a href="/">Back to the main page.</a></p>
