--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -3,75 +3,76 @@
 {% load staticfiles %}
 {% load upvote %}
 
-<table width="90%">
-    <tr>
-        <td style="vertical-align: top; width: 50px">
-            <div class="upvote" data-id="{{oneliner.pk}}" data-user-id="{{oneliner.user.id}}">
-                <a class="upvote {% upvoted oneliner %}"></a>
-                <span class="count">{{oneliner.score|default:'0'}}</span>
-                <a class="downvote {% downvoted oneliner %}"></a>
-                <!-- coming soon!
-                <a class="star {{oneliner.starred}}"></a>
-                -->
-            </div>
-        </td>
-
-        <td>
-            <div class="oneliner oneliner-{{oneliner.pk}}">
-                <h3 class="summary">
-                    <a href="{% url 'oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
-                    {% if user == oneliner.user %}
-                    <a class="btn" href="{% url 'oneliners.views.oneliner_edit' oneliner.pk %}"><i class="icon-pencil"></i>{% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>
-                    {% endif %}
-                </h3>
-
-                <pre class="line"><span class="add-on">&nbsp;$&nbsp;</span><span class="oneliner-line">{{ oneliner.line }}</span></pre>
-
-                <p class="author"><small>
-                &mdash; by <a href="{% url 'oneliners.views.profile' oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
-                    on <span>{{ oneliner.created_dt }}</span>
-                </small></p>
-
-                <div class="explanation">
-                    <h4>Explanation</h4>
-                    {{ oneliner.explanation|markdown:"safe" }}
+<div class="well">
+    <table width="100%">
+        <tr>
+            <td style="vertical-align: top; width: 50px">
+                <div class="upvote" data-id="{{oneliner.pk}}" data-user-id="{{oneliner.user.id}}">
+                    <a class="upvote {% upvoted oneliner %}"></a>
+                    <span class="count">{{oneliner.score|default:'0'}}</span>
+                    <a class="downvote {% downvoted oneliner %}"></a>
+                    <!-- coming soon!
+                    <a class="star {{oneliner.starred}}"></a>
+                    -->
                 </div>
+            </td>
 
-                {% if oneliner.limitations %}
-                <div class="limitations">
-                    <h4>Limitations</h4>
-                    {{ oneliner.limitations|markdown:"safe" }}
-                </div>
-                {% endif %}
+            <td>
+                <div class="oneliner oneliner-{{oneliner.pk}}">
+                    <h3 class="summary">
+                        <a href="{% url 'oneliner' oneliner.pk %}">{{ oneliner.summary|capfirst }}</a>
+                        {% if user == oneliner.user %}
+                        <a class="btn" href="{% url 'oneliners.views.oneliner_edit' oneliner.pk %}"><i class="icon-pencil"></i>{% if not oneliner.is_published %}<span class="draft">(Not published!)</span>{% endif %}</a>
+                        {% endif %}
+                    </h3>
 
-                {% if user == question.user and not question.is_answered %}
-                <p><a href="{% url 'oneliners.ajax.question_answered' question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
-                {% endif %}
+                    <pre class="line"><span class="add-on">&nbsp;$&nbsp;</span><span class="oneliner-line">{{ oneliner.line }}</span></pre>
 
-                {% if user.is_authenticated and not nobuttons %}
-                <p>
-                    <a href="{% url 'oneliners.views.oneliner_alternative' oneliner.pk %}" class="btn">Post an alternative one-liner</a>
-                    <a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a>
-                </p>
-                {% endif %}
+                    <p class="author"><small>
+                    &mdash; by <a href="{% url 'oneliners.views.profile' oneliner.user.pk %}"><span>{{ oneliner.user.hackerprofile.get_display_name }}</span></a>
+                        on <span>{{ oneliner.created_dt }}</span>
+                    </small></p>
 
-                {% block related %}
-                {% endblock %}
-
-                {% get_comment_count for oneliner as comment_count %}
-                {% if comment_count > 0 %}
-                <div class="related">
-                    <h3 class="comments-toggle {{ comments_expanded }}"><img src="{% static 'images/arrows0.png' %}" alt="[comments]" />Comments ({{ comment_count }})</h3>
-                    <div class="well comments {{ comments_expanded }}">
-                    {% render_comment_list for oneliner %}
-                    {% if user.is_authenticated and not nobuttons %}
-                    <p><a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
-                    {% endif %}
+                    <div class="explanation">
+                        <h4>Explanation</h4>
+                        {{ oneliner.explanation|markdown:"safe" }}
                     </div>
+
+                    {% if oneliner.limitations %}
+                    <div class="limitations">
+                        <h4>Limitations</h4>
+                        {{ oneliner.limitations|markdown:"safe" }}
+                    </div>
+                    {% endif %}
+
+                    {% if user == question.user and not question.is_answered %}
+                    <p><a href="{% url 'oneliners.ajax.question_answered' question.pk oneliner.pk %}" class="btn btn-primary question-answered" data-parent="question-{{ question.pk }}">Accept this answer</a></p>
+                    {% endif %}
+
+                    {% if user.is_authenticated and not nobuttons %}
+                    <p>
+                        <a href="{% url 'oneliners.views.oneliner_alternative' oneliner.pk %}" class="btn">Post an alternative one-liner</a>
+                        <a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a>
+                    </p>
+                    {% endif %}
+
+                    {% block related %}
+                    {% endblock %}
+
+                    {% get_comment_count for oneliner as comment_count %}
+                    {% if comment_count > 0 %}
+                    <div class="related">
+                        <h3 class="comments-toggle {{ comments_expanded }}"><img src="{% static 'images/arrows0.png' %}" alt="[comments]" />Comments ({{ comment_count }})</h3>
+                        <div class="well comments {{ comments_expanded }}">
+                        {% render_comment_list for oneliner %}
+                        {% if user.is_authenticated and not nobuttons %}
+                        <p><a href="{% url 'oneliners.views.oneliner_comment' oneliner.pk %}" class="btn"><i class="icon-comment"></i> Post a comment on this one-liner</a></p>
+                        {% endif %}
+                        </div>
+                    </div>
+                    {% endif %}
                 </div>
-                {% endif %}
-            </div>
-        </td>
-    </tr>
-    <tr><td colspan="2"><hr/></td></tr>
-</table>
+            </td>
+        </tr>
+    </table>
+</div>
