--- a/oneliners/templates/oneliners/pages/oneliner_edit.html
+++ b/oneliners/templates/oneliners/pages/oneliner_edit.html
@@ -23,7 +23,9 @@
 <div class="alert alert-info related">
     <p>The new one-liner will be linked to the following one-liner as an alternative:</p>
     {% with 1 as nobuttons %}
-    {% include 'oneliners/elements/oneliner.html' %}
+        {% with oneliner.score as score %}
+            {% include 'oneliners/elements/oneliner.html' %}
+        {% endwith %}
     {% endwith %}
 </div>
 {% endif %}
