--- a/oneliners/templates/oneliners/elements/oneliner_with_related.html
+++ b/oneliners/templates/oneliners/elements/oneliner_with_related.html
@@ -2,47 +2,51 @@
 
 {% block related %}
 	{% if oneliner.relateds %}
-	{% with oneliner.relateds as alternatives %}
-	<div class="related">
-	    <h3 class="">Related one-liners</h3>
-	    <div class="oneliners">
-	    {% for alternative in alternatives %}
-	    {% with alternative.oneliner as oneliner %}
-	    {% include 'oneliners/elements/oneliner.html' %}
-	    {% endwith %}
-	    {% endfor %}
-	    </div>
-	</div>
-	{% endwith %}
+        {% with oneliner.relateds as alternatives %}
+            <div class="related">
+                <h3 class="">Related one-liners</h3>
+                <div class="oneliners">
+                {% for alternative in alternatives %}
+                    {% with alternative.oneliner as oneliner %}
+                        {% with alternative.score as score %}
+                            {% include 'oneliners/elements/oneliner.html' %}
+                        {% endwith %}
+                    {% endwith %}
+                {% endfor %}
+                </div>
+            </div>
+        {% endwith %}
 	{% endif %}
 
 	{% if oneliner.alternatives %}
-	{% with oneliner.alternatives as alternatives %}
-	<div class="related">
-	    <h3 class="">Alternative one-liners</h3>
-	    <div class="oneliners">
-	    {% for alternative in alternatives %}
-	    {% with alternative.alternative as oneliner %}
-	    {% include 'oneliners/elements/oneliner.html' %}
-	    {% endwith %}
-	    {% endfor %}
-	    </div>
-	</div>
-	{% endwith %}
+        {% with oneliner.alternatives as alternatives %}
+            <div class="related">
+                <h3 class="">Alternative one-liners</h3>
+                <div class="oneliners">
+                {% for alternative in alternatives %}
+                    {% with alternative.alternative as oneliner %}
+                        {% with alternative.score as score %}
+                            {% include 'oneliners/elements/oneliner.html' %}
+                        {% endwith %}
+                    {% endwith %}
+                {% endfor %}
+                </div>
+            </div>
+        {% endwith %}
 	{% endif %}
 
 	{% if oneliner.questions %}
-	{% with oneliner.questions as answers %}
-	<div class="related">
-	    <h3 class="">Related questions</h3>
-	    <div class="questions">
-	    {% for answer in answers %}
-	    {% with answer.question as question %}
-	    {% include 'oneliners/elements/question.html' %}
-	    {% endwith %}
-	    {% endfor %}
-	    </div>
-	</div>
-	{% endwith %}
+        {% with oneliner.questions as answers %}
+            <div class="related">
+                <h3 class="">Related questions</h3>
+                <div class="questions">
+                {% for answer in answers %}
+                {% with answer.question as question %}
+                {% include 'oneliners/elements/question.html' %}
+                {% endwith %}
+                {% endfor %}
+                </div>
+            </div>
+        {% endwith %}
 	{% endif %}
 {% endblock %}
