minor text change

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -11,10 +11,10 @@
 {% block content %}
 
 <p>Welcome to <strong>bashoneliners.com</strong>, a place for practical or just pure awesome bash <em>one-liners</em> or shell script tips and tricks for GNU Linux, UNIX or BSD systems.
-You can post a bash one-liner to share it with the world,
-or browse or search the one-liners contributed by others.</p>
+Post cool bash one-liners to share with the world,
+or search the one-liners contributed by others.</p>
 
-<p>You can follow the latest bash one-liners via <a href="{% url 'oneliners.views.feeds' %}">rss feeds</a> or on twitter <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a>.</p>
+<p>You can follow the latest bash one-liners using <a href="{% url 'oneliners.views.feeds' %}">rss feeds</a> or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.</p>
 
 <h2>Tags</h2>
 
