--- a/oneliners/templates/oneliners/pages/oneliner.html
+++ b/oneliners/templates/oneliners/pages/oneliner.html
@@ -2,12 +2,16 @@
 
 {% block pagetitle %}One-Liner{% endblock %}
 
-{% block pageheader %}One-Liner{% endblock %}
+{% block pageheader %}One-Liner
+    {% if user.is_authenticated %}
+    <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
+    {% endif %}
+{% endblock %}
 
 {% block content %}
 
 {% with 'expanded' as comments_expanded %}
-{% include 'oneliners/elements/oneliners.html' %}
+    {% include 'oneliners/elements/oneliners.html' %}
 {% endwith %}
 
 {% endblock %}
