shortened Source code link in the navbar to simply Source

--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -28,7 +28,7 @@
 		    {% endif %}
 		    <li><a href="{% url 'oneliners.views.question_list' %}">Questions</a></li>
 		    <li><a href="{% url 'oneliners.views.feeds' %}">Feeds</a></li>
-		    <li><a href="{% url 'oneliners.views.sourcecode' %}">Source code</a></li>
+		    <li><a href="{% url 'oneliners.views.sourcecode' %}">Source</a></li>
 		</ul>
 
 		{% if searchform %}
