--- a/oneliners/templates/oneliners/pages/question_list.html
+++ b/oneliners/templates/oneliners/pages/question_list.html
@@ -13,10 +13,12 @@
 <div style="margin-bottom: 2em">
 
 <p>If you have a question that can be answered by an appropriate bash one-liner,
-feel free to ask it here!</p>
+feel free to ask it here.</p>
 
 {% if user.is_authenticated %}
-<p><a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary">Post a question</a></p>
+    {% if not questions %}
+        <p><a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary">Post a question</a></p>
+    {% endif %}
 {% else %}
 <div class="alert alert-warning">
     <strong class="alert-heading">Note:</strong>
@@ -27,7 +29,11 @@ feel free to ask it here!</p>
 </div>
 
 {% if questions %}
-<h2>Recent questions</h2>
+<h2 class="page-header">Recent questions
+    {% if user.is_authenticated %}
+    <a href="{% url 'oneliners.views.question_new' %}" class="btn btn-primary pull-right">Post a question</a>
+    {% endif %}
+</h2>
 
 {% include 'oneliners/elements/questions.html' %}
 
