--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -24,12 +24,12 @@
 		    {% endif %}
 		    <li><a href="{% url 'oneliners.views.oneliner_list' %}">One-Liners</a></li>
 		    <li><a href="{% url 'oneliners.views.question_list' %}">Questions</a></li>
-		    <li><a href="{% url 'oneliners.views.feeds' %}">Feeds</a></li>
 		    <li><a href="{% url 'oneliners.views.sourcecode' %}">Source</a></li>
+            <li><a href="{% url 'oneliners.views.feeds' %}"><span class="label label-info">RSS</span></a></li>
 		</ul>
 
 		{% if searchform %}
-		<form class="navbar-search pull-left" method="get" action="{% url 'oneliners.views.search' %}">
+		<form class="navbar-search" method="get" action="{% url 'oneliners.views.search' %}">
 		    <input name="query" maxlength="100" placeholder="Search" type="text" class="search-query" id="id_query" />
 		</form>
 		{% endif %}
