made search box in the navbar more compact but expand on click

--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -30,7 +30,7 @@
 
 		{% if searchform %}
 		<form class="navbar-search" method="get" action="{% url 'oneliners.views.search' %}">
-		    <input name="query" maxlength="100" placeholder="Search" type="text" class="search-query" id="id_query" />
+		    <input name="query" maxlength="100" placeholder="Search" type="text" class="search-query input-small" id="id_query" />
 		</form>
 		{% endif %}
 
