use css to set table.oneliner width

--- a/oneliners/templates/oneliners/elements/oneliner.html
+++ b/oneliners/templates/oneliners/elements/oneliner.html
@@ -4,7 +4,7 @@
 {% load upvote %}
 
 <div class="well">
-    <table width="100%">
+    <table class="oneliner">
         <tr>
             <td style="vertical-align: top; width: 50px">
                 <div class="upvote" data-id="{{oneliner.pk}}" data-user-id="{{oneliner.user.id}}">
