implemented tabbed one-liners and questions views in profile

--- a/oneliners/static/css/bashoneliners.css
+++ b/oneliners/static/css/bashoneliners.css
@@ -164,6 +164,10 @@ table.profile {
     width: auto;
 }
 
+.nav-profile li {
+    float: right;
+}
+
 .related .well {
     background: #dff0d8;
 }
