--- a/oneliners/templates/oneliners/elements/profile_nav.html
+++ b/oneliners/templates/oneliners/elements/profile_nav.html
@@ -1,12 +1,9 @@
 <ul class="nav nav-tabs nav-profile">
-    <!--
-    <li class="{{ active_starred }}">
-        <a href="#starred">Favorites</a>
-    </li>
+    {% if hacker == user %}
     <li class="{{ active_votes }}">
-        <a href="#votes">Votes</a>
+        <a href="{% url 'profile_votes' %}">Votes</a>
     </li>
-    -->
+    {% endif %}
     <li class="{{ active_questions }}">
         <a href="{% url 'profile_questions' hacker.pk %}">Questions</a>
     </li>
