revised intro text, added more todos

--- a/oneliners/templates/oneliners/pages/index.html
+++ b/oneliners/templates/oneliners/pages/index.html
@@ -10,11 +10,16 @@
 
 {% block content %}
 
-<p>Welcome to <strong>bashoneliners.com</strong>, a place for practical or just pure awesome bash <em>one-liners</em> or shell script tips and tricks for GNU Linux, UNIX or BSD systems.
-Post cool bash one-liners to share with the world,
-or search the one-liners contributed by others.</p>
+<p>Welcome to <strong>bashoneliners.com</strong>,
+a growing collection of practical,
+awesome <em>bash one-liners</em> that you can use in
+GNU/Linux, UNIX or BSD systems.
+Post your cool one-liners to share with the world.
+Make sure to explain your shell script tips and tricks well.
+Think of this as an opportunity to spread good and clean coding practices.</p>
 
-<p>You can follow the latest bash one-liners using <a href="{% url 'oneliners.views.feeds' %}">rss feeds</a> or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.</p>
+<p>To get the latest bash one-liners, follow our <a href="{% url 'oneliners.views.feeds' %}">rss feeds</a>
+or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.</p>
 
 <h2>Tags</h2>
 
