--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -22,7 +22,7 @@
 		    {% if user.is_superuser %}
 		    <li><a href="/admin/">Admin</a></li>
 		    {% endif %}
-		    <li><a href="{% url 'oneliners.views.oneliner_list' %}">One-Liners</a></li>
+		    <li><a href="{% url 'oneliners_default' %}">One-Liners</a></li>
 		    <li><a href="{% url 'oneliners.views.question_list' %}">Questions</a></li>
 		    <li><a href="{% url 'oneliners.views.sourcecode' %}">Source</a></li>
             <li><a href="{% url 'oneliners.views.feeds' %}"><span class="label label-info">RSS</span></a></li>
