--- a/oneliners/templates/oneliners/pages/oneliners.html
+++ b/oneliners/templates/oneliners/pages/oneliners.html
@@ -29,6 +29,8 @@ or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
 {% endfor %}
 </ul>
 
+{% include 'oneliners/elements/oneliners_nav.html' %}
+
 <h2 class="page-header">One-Liners
     {% if user.is_authenticated %}
     <a href="{% url 'oneliners.views.oneliner_new' %}" class="btn btn-primary pull-right">Post a one-liner</a>
