minor fixes and ergonomic renames

--- a/oneliners/templates/oneliners/elements/oneliners_nav.html
+++ b/oneliners/templates/oneliners/elements/oneliners_nav.html
@@ -1,4 +1,4 @@
-<ul class="nav nav-tabs nav-profile">
+<ul class="nav nav-tabs nav-oneliners">
     <li class="{{ active_popular }}">
         <a href="{% url 'oneliners_popular' %}">Popular</a>
     </li>
