--- a/oneliners/templates/oneliners/elements/oneliners_nav.html
+++ b/oneliners/templates/oneliners/elements/oneliners_nav.html
@@ -1,8 +1,8 @@
 <ul class="nav nav-tabs nav-oneliners">
     <li class="{{ active_popular }}">
-        <a href="{% url 'oneliners_popular' %}">Popular</a>
+        <a href="{% url 'oneliners_popular' %}" data-ordering="popular">Popular</a>
     </li>
     <li class="{{ active_newest }}">
-        <a href="{% url 'oneliners_newest' %}">Newest</a>
+        <a href="{% url 'oneliners_newest' %}" data-ordering="newest">Newest</a>
     </li>
 </ul>
