align validators in the center

--- a/oneliners/static/css/bashoneliners.css
+++ b/oneliners/static/css/bashoneliners.css
@@ -84,7 +84,7 @@
     }
 
     .validators {
-        text-align: right;
+        text-align: center;
     }
     .validators a {
         margin-left: .5em;
