--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -58,7 +58,7 @@
 
 {% block footer %}
     <div class="container-fluid">
-        <p class="pull-right validators"> 
+        <p class="validators"> 
             <a href="http://wiki.dreamhost.com/index.php/DHSOTM#2012_Winners"><img alt="DreamHost Site of the Month for March!" src="{% static 'images/dhsotm2.gif' %}" /></a> 
             <a href="http://www.dreamhost.com/r.cgi?455568"><img alt="This site hosted by DreamHost. Unlimited storage and bandwidth for only $8.95" src="{% static 'images/dreamhost.gif' %}" /></a> 
             <a href="http://www.dreamhost.com/donate.cgi?id=15533"><img style="border: 0" alt="Donate towards my web hosting bill!" src="{% static 'images/hosting.gif' %}" /></a>
