skip feeds page, jump directly to oneliners rss feed

--- a/oneliners/templates/base.html
+++ b/oneliners/templates/base.html
@@ -27,7 +27,7 @@
                     <li><a href="{% url 'oneliners.views.question_list' %}">Questions</a></li>
                     -->
                     <li><a href="{% url 'oneliners.views.sourcecode' %}">Source</a></li>
-            <li><a href="{% url 'oneliners.views.feeds' %}"><span class="label label-info">RSS</span></a></li>
+                    <li><a href="{% url 'oneliners.feeds.oneliner' %}"><span class="label label-info">RSS</span></a></li>
                 </ul>
 
                 {% if searchform %}
