--- a/oneliners/templates/oneliners/pages/oneliners.html
+++ b/oneliners/templates/oneliners/pages/oneliners.html
@@ -18,7 +18,7 @@ Post your cool one-liners to share with the world.
 Make sure to explain your shell script tips and tricks well.
 Think of this as an opportunity to spread good and clean coding practices.</p>
 
-<p>To get the latest bash one-liners, follow our <a href="{% url 'oneliners.views.feeds' %}">rss feeds</a>
+<p>To get the latest bash one-liners, follow our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>
 or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.</p>
 
 <h2>Tags</h2>
