updated source code page and refined front

--- a/oneliners/templates/oneliners/pages/oneliners.html
+++ b/oneliners/templates/oneliners/pages/oneliners.html
@@ -32,16 +32,17 @@ Or just pure awesome and wicked cool, that's ok too.
 <p>
 To get the latest bash one-liners, follow our <a href="{% url 'oneliners.feeds.oneliner' %}">rss feed</a>
 or <a href="https://twitter.com/#!/bashoneliners">@bashoneliners</a> on Twitter.
+If you discover bugs, you can either <a href="https://github.com/janosgyerik/bashoneliners/issues">report it on GitHub</a>,
+or send an email to our <a href="mailto:bashoneliners@googlegroups.com">public mailing list</a>,
+or send us a <a href="mailto:info@bashoneliners.com">private email</a>.
 </p>
 
 <div class="alert alert-block alert-info">
 The site is still pretty far from what we want it to be.
 Mainly we need more Django coders.
 At the minimum it would be great help if you could spread the word and talk about this site on Twitter, Google+, Facebook, all your social outlets.
-If you want to help with coding,
-you can <a href="{% url 'oneliners.views.sourcecode' %} ">grab the source code</a> from GitHub or others.
-Take a look at our <a href="https://trello.com/b/PdQFoRDt/bash-one-liners">public todo list on Trello</a>,
-and dive in!
+If you want to help with coding in Django,
+please take a look at our <a href="{% url 'oneliners.views.sourcecode' %} ">Source code page</a>.
 </div>
 
 <h2>Tags</h2>
