improved the posting instructions, with more detailed explanations

--- a/oneliners/templates/oneliners/pages/oneliner_edit.html
+++ b/oneliners/templates/oneliners/pages/oneliner_edit.html
@@ -33,9 +33,9 @@
 {% include 'oneliners/elements/please_login.html' %}
 
 <ul>
-    <li>Before you post, please do a quick search to confirm the one-liner does not exist yet.</li>
-    <li>Please post only non-trivial and really useful, interesting or awesome one-liners.</li>
-    <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off.</li>
+    <li>Before you post, please do a quick search to check if a similar one-liner already exists. If it does, and you think your version is better, you can post it as an <em>alternative</em> one-liner, and the two will be linked together.</li>
+    <li>Please post only non-trivial, practical one-liners that are actually useful for something in real life, and in not too extreme, limited situations. Pure awesome wicked-cool one-liners are OK too.</li>
+    <li>The <strong>Explanation</strong> is very important. The purpose of this site is to teach, not to show off. Please write nicely, explain clearly, as if teaching a trick to your friend.</li>
 </ul>
 
 {% include 'oneliners/elements/oneliner_edit_form.html' %}
