--- a/oneliners/templates/oneliners/elements/oneliner_edit_form.html
+++ b/oneliners/templates/oneliners/elements/oneliner_edit_form.html
@@ -2,14 +2,23 @@
     <div class="non-field-errors">{{ form.non_field_errors }}</div>
     <div class="oneliner">
         <h3>Summary of the one-liner<span class="required">*</span></h3>
-        <div class="help-block">In one sentence, what does it do?</div>
+        <div class="help-block">In one sentence, what does it do? What is its purpose?</div>
         <div class="input">
             <div class="error">{{ form.summary.errors }}</div>
             <div class="summary">{{ form.summary }}</div>
         </div>
         
         <h3>The one-liner<span class="required">*</span></h3>
-        <div class="help-block">Use a space around "|", single space after ";", UPPERCASE variable names, $() style subshells instead of ``</div>
+        <div class="help-block">
+            Use a space around <code>|</code>,
+            single space after <code>;</code>,
+            and UPPERCASE variable names.
+            Use <code>$()</code> for subshells instead of obsolete <code>``</code>.
+            Do not use unnecessary flags or pointless trailing <code>;</code>.
+            Basically, make it as readable as possible,
+            as concise as possible,
+            without unnecessary elements.
+        </div>
         <div class="input input-prepend">
             <div class="error">{{ form.line.errors }}</div>
             <div class="oneliner input-prepend">
@@ -19,8 +28,14 @@
         </div>
         
         <h3>Explanation<span class="required">*</span></h3>
-        <div class="help-block">This is the most important field. Explain how the one-liner works as if you're teaching it to a good friend. No need to dissect word by word.
-            <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
+        <div class="help-block">
+            <strong>This is extremely important!</strong>
+            Good explanations make this site stand out,
+            this field is the most appreciated feature mentioned by many visitors.
+            Explain nicely and clearly how the one-liner works,
+            as if you're teaching it to your good friend.
+            Include enough details so that non-experts can understand it too.
+            <br/>Note: all html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
         </div>
         <div class="input">
             <div class="error">{{ form.explanation.errors }}</div>
@@ -28,7 +43,10 @@
         </div>
         
         <h3>Limitations (optional)</h3>
-        <div class="help-block">For example, if the one-liner might not work in some flavors of UNIX, etc.
+        <div class="help-block">
+            Mention if you know or suspect that the one-liner
+            might not work in some flavors of UNIX,
+            or if it works only in Bash 4.0.
             <br/>Note: any html will be escaped, and the text will be formatted with <a class="help help-markdown" href="{% url 'oneliners.views.help_markdown' %}">markdown</a>.
         <div class="input">
             <div class="error">{{ form.limitations.errors }}</div>
