corrected prod site check

--- a/oneliners/templates/oneliners/pages/oneliners.html
+++ b/oneliners/templates/oneliners/pages/oneliners.html
@@ -4,7 +4,7 @@
 
 {% block pageheader %}
 bashoneliners.com
-    {% if SERVER_NAME != 'bashoneliners.com' %}
+    {% if SERVER_NAME != 'www.bashoneliners.com' %}
         <a href="http://bashoneliners.com/" class="btn btn-success pull-right">bashoneliners.com</a>
     {% endif %}
     {% if SERVER_NAME != 'beta.bashoneliners.com' %}
